Fix copy-paste operation not working after using the move tool

The copying should force-finish the move operation

BUG:458764