libs/ui/actions/kis_selection_action_factories.cpp
@@ -271,6 +271,8 @@ void KisCutCopyActionFactory::run(bool willCut, bool makeSharpClip, KisViewManag
     KisImageSP image = view->image();
     if (!image) return;
 
+    if (!view->blockUntilOperationsFinished(image)) return;
+
     // Reference layers is a fake node, so it isn't added to the layer stack, this results in KisSelectedShapesProxy not
     // being aware of the active shapeManager and its selected shapes.
     const auto currentToolHasSelection =
